welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: ')' expected but '}' found.
  }
  ^array667:15: error: Unmatched closing brace '}' ignored here
                                      } 
                                      ^